components/animations/horizontal-scroll/horizontal-scroll.module.css
.frame {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  outline: mobile-vw(15px) solid var(--bricky-brick);
  outline-offset: mobile-vw(-15px);
  pointer-events: none;
  z-index: 100;

  @include-media ('tablet') {
    outline: tablet-vw(10px) solid var(--bricky-brick);
    outline-offset: tablet-vw(-10px);
  }

  @include-media ('desktop') {
    outline: desktop-vw(15px) solid var(--bricky-brick);
    outline-offset: desktop-vw(-15px);
  }
}
.panel {
  width: 100vw;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  min-height: 100vh;
  min-height: calc(var(--vh, 1vh) * 100);
}
.title {
  position: absolute;
  z-index: 150;

  @include-media ('tablet') {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: tablet-vw(600px);
  }

  @include-media ('desktop') {
    top: desktop-vw(50px);
    left: desktop-vw(100px);
    width: desktop-vw(1230px);
    white-space: nowrap;
  }
}
.bgImage {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;

  /* &:after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.15);
  } */

  .img {
    transform: scale(1.33);
    transform-origin: center center;
  }
}
.descriptionC {
  position: absolute;
  left: 50%;
  bottom: mobile-vw(50px);
  width: mobile-vw(300px);
  transform: translateX(-50%);

  @include-media ("tablet") {
    bottom: tablet-vw(250px);
    width: tablet-vw(300px);
  }

  @include-media ("desktop") {
    left: desktop-vw(100px);
    bottom: desktop-vw(100px);
    width: desktop-vw(400px);
    transform: translateX(0);
  }
}
.infoText {
  z-index: 150;
}
.container {
  position: relative;
  width: 500%;
  height: 100%;
  display: flex;
  flex-wrap: nowrap;
}

